Dancer 1.175
    [ Sawyer X ]
    * RT #56395 reported by Jonathan Yu on behalf of Debian Perl team.
    * Documentation for Dancer::Error

    [ Alexis Sukrieh ]
    * fixed t/15_plugins/02_config.t when YAML is not installed 

Dancer 1.174
    [ Gabor Szabo ]
    * Docs fixes, typo in warning.
    * TestUtils.pm is now in "t/lib".

    [ David Precious ]
    * Support semi-colons as name=value pair separators when parsing
      querystring.  Satisfies feature request/issue 59.
      Thanks to deepakg for requesting this feature.

    [ Sawyer X ]
    * RT #56381 reported by Jonathan Yu on behalf of Debian Perl team.
      (Adding LICENSE file)

Dancer 1.173_01 (Developer release)
    [ Franck Cuny ]
    * Doc fixes.
      (Thanks to poisonbit)
    * Plugins configuration
    * Cleaning up tests

	[ Alexis Sukrieh ]
	* New serializer: Dumper for easily output dumped variable 
	  in text/plain.
	* Before filters can now access route params
    * Support for '.' as a token separator in params parsing
	* The standalone server respect the 'access_log' setting, 
	  the starting banner is printed on STDERR only if the 
	  setting is set to true.

    [ Sawyer X ]
    * Fixed Windows PSGI.URL_SCHEME bug, causing tests to fail
      (Thanks to ADAMK for reporting)

Dancer 1.173
    [ Alexis Sukrieh ]
    * Documenting set_cookie in Dancer.pm.

    [ Franck Cuny ]
    * Cleaning up serializer test.

    [ François Charlier ]
    * Documenting layout disabling.

    [ Sawyer X ]
    * Fix a few failing tests because of compilation errors.
    * Add init{} subs for all serializers.
    * Dancer::Engine documentation

    [ David Precious ]
    * Fix issue 52 - creating invalid cookie expiration dates.
      Thanks to Juanjo (reidrac) for reporting!

Dancer 1.172
    [ Alexis Sukrieh ]
    * Plugin support.

    [ Franck Cuny ]
    * Prevent usage of reserved Dancer keywords in plugins.
    * Tests cleanups.

    [ Robert Olson ]