@@ -1,19 +1,30 @@
 --- #YAML:1.0
-name:                Dancer
-version:             1.175
-abstract:            A minimal-effort oriented web application framework
-license:             perl
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    File::Basename:                0
-    File::Spec:                    0
-    HTTP::Body:                    0
-    HTTP::Server::Simple::PSGI:    0.11
-    MIME::Types:                   0
-    Test::More:                    0.87
-    URI:                           0
+name:               Dancer
+version:            1.175_01
+abstract:           A minimal-effort oriented web application framework
+author:  []
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    Test::More:  0.87
+requires:
+    File::Basename:       0
+    File::Spec:           0
+    HTTP::Body:           0
+    HTTP::Server::Simple::PSGI:  0.11
+    MIME::Types:          0
+    URI:                  0
+resources:
+    bugtracker:  http://github.com/sukria/Dancer/issues
+    homepage:    http://perldancer.org/
+    repository:  http://github.com/sukria/Dancer
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
