@@ -1,7 +1,10 @@
 Dancer 1.175
     [ Sawyer X ]
     * RT #56395 reported by Jonathan Yu on behalf of Debian Perl team.
-    * Documentation for Dancer::Error
+    * Documentation for Dancer::Error.
+    * Documentation for Dancer::FileUtils.
+    * Documentation for Dancer::Cookie.
+    * Fixing PNG bug on IE (reported by Adam Kennedy - thank you).
 
     [ Alexis Sukrieh ]
     * fixed t/15_plugins/02_config.t when YAML is not installed 
